<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasch.devdroid.rxjavaexample.ui.networking.NetworkingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/map"
            android:layout_margin="8dp"
            android:onClick="map"
            android:text="@string/map"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/zip"
            android:layout_margin="8dp"
            android:onClick="zip"
            android:text="@string/zip"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/flatmapAndFilter"
            android:layout_margin="8dp"
            android:onClick="map"
            android:text="@string/flatMapWithFilter"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/take"
            android:layout_margin="8dp"
            android:onClick="take"
            android:text="@string/take"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/flatMap"
            android:layout_margin="8dp"
            android:onClick="flatMap"
            android:text="@string/flatmap"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/flapMapWithZip"
            android:layout_margin="8dp"
            android:onClick="flatMapWithZip"
            android:text="@string/flatmap_with_zip"/>



    </LinearLayout>
</ScrollView>
